--- a/css/main.css
+++ b/css/main.css
@@ -378,6 +378,10 @@ textarea {
   background-color: transparent;
 }
 
+.menu-button .icon-close {
+  display: none;
+}
+
 .backdrop {
   position: fixed;
   top: 0;
@@ -428,7 +432,7 @@ textarea {
 }
 
 .modal__btn-close {
-  position: relative;
+  position: absolute;
   top: 8px;
   right: 8px;
   display: -webkit-box;
@@ -443,6 +447,7 @@ textarea {
   cursor: pointer;
   width: 30px;
   height: 30px;
+  padding: 0;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   background-color: #fff;
