--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -36,7 +36,7 @@
   transform: scale(0);
 }
 .modal__btn-close {
-  position: relative;
+  position: absolute;
   top: 8px;
   right: 8px;
 
@@ -45,6 +45,7 @@
   cursor: pointer;
   width: 30px;
   height: 30px;
+  padding: 0;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   background-color: #fff;
