--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,3 +1,6 @@
+.header {
+  position: relative;
+}
 // .header {
 //   border-bottom: 1px solid #ececec;
 //   .container {
@@ -5,6 +8,7 @@
 //     align-items: center;
 //   }
 // }
+
 // .site-nav {
 //   display: flex;
 //   align-items: center;
