--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import './base/title';
 @import './utils/mixins';
 @import './components/logo';
+@import './components/menu';
 @import './components/page-header';
 @import './components/page-footer';
 @import './base/button';
