--- a/css/main.css
+++ b/css/main.css
@@ -141,6 +141,49 @@ textarea {
   color: var(--reserve-text-color);
 }
 
+.menu-button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  padding: 0;
+  margin-left: auto;
+  border: none;
+  background-color: transparent;
+}
+
+.menu-button .icon-close {
+  display: none;
+}
+
+.menu-button.is-open .icon-close {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+
+.mobile-menu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 453px;
+  padding: 10px;
+  background-color: green;
+  text-align: center;
+  font-size: 20px;
+}
+
+.mobile-menu.is-open {
+  display: block;
+}
+
+.header {
+  position: relative;
+}
+
 .footer {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -366,20 +409,6 @@ textarea {
   background-color: var(--accent-text-color);
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
-
-.menu-button {
-  display: inline-block;
-  width: 40px;
-  height: 40px;
-  padding: 0;
-  margin: 0;
-  border: none;
-  background-color: transparent;
-}
-
-.menu-button .icon-close {
-  display: none;
 }
 
 .backdrop {
