--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -150,18 +150,8 @@ textarea {
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-.menu-button {
-  display: inline-block;
-  width: 40px;
-  height: 40px;
-  padding: 0;
-  margin: 0;
-  border: none;
-  background-color: transparent;
-}
-
-.menu-button .icon-close {
-  display: none;
+.header {
+  position: relative;
 }
 
 .footer {
