--- a/css/main.css
+++ b/css/main.css
@@ -149,39 +149,161 @@ textarea {
   margin-left: auto;
   border: none;
   background-color: transparent;
+  z-index: 9999;
+  outline: none;
+  -webkit-transition: color var(--timing-fn);
+  transition: color var(--timing-fn);
 }
 
-.menu-button .icon-close {
+.menu-button .icon-cross {
   display: none;
 }
 
-.menu-button.is-open .icon-close {
+.menu-button :hover,
+.menu-button :focus {
+  color: var(--accent-text-color);
+}
+
+.menu-button.is-open .icon-cross {
   display: block;
+  position: relative;
 }
 
 .menu-button.is-open .icon-menu {
   display: none;
 }
 
-.mobile-menu {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  height: 453px;
-  padding: 10px;
-  background-color: green;
-  text-align: center;
-  font-size: 20px;
+.mobile-social__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 357px;
 }
 
-.mobile-menu.is-open {
-  display: block;
+.icon-menu,
+.icon-cross {
+  fill: currentColor;
 }
 
-.header {
-  position: relative;
+@media screen and (max-width: 767px) {
+  .site-nav {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .site-nav__list {
+    margin-bottom: 306px;
+  }
+  .site-nav__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+  .site-nav__link {
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: var(--primary-text-color);
+  }
+  .site-nav__link.current {
+    color: var(--accent-text-color);
+  }
+  .contacts__icon {
+    display: none;
+  }
+  .contacts {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .contacts__item:not(:first-child) {
+    margin-bottom: 32px;
+  }
+  .mob-tel {
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: var(--accent-text-color);
+  }
+  .mob-email {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+    color: var(--secondary-text-color);
+  }
+  .mobile-social__list {
+    margin-top: 64px;
+  }
+  .mobile-social__link {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    color: var(--accent-text-color);
+  }
+  .mobile-social__item {
+    position: relative;
+    margin-right: 20px;
+  }
+  .mobile-social__item:not(:last-child)::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: -10px;
+    display: block;
+    height: 22px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+  }
+  .mobile-menu {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    padding: 48px 40px;
+  }
+  .mobile-menu.is-open {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
+  .mobile-social__list {
+    display: none;
+  }
+}
+
+.site-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .footer {
