--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -1,34 +1,132 @@
 .menu-button {
   display: inline-flex;
-
   padding: 0;
   margin-left: auto;
   border: none;
   background-color: transparent;
+  z-index: 9999;
+  outline: none;
+  transition: color var(--timing-fn);
 
-  .icon-close {
+  .icon-cross {
+    display: none;
+  }
+  :hover,
+  :focus {
+    color: var(--accent-text-color);
+  }
+}
+.menu-button.is-open {
+  .icon-cross {
+    display: block;
+    position: relative;
+  }
+  .icon-menu {
     display: none;
   }
 }
-.menu-button.is-open .icon-close {
-  display: block;
+.mobile-social__list {
+  display: flex;
+  justify-content: space-between;
+  width: 357px;
 }
-.menu-button.is-open .icon-menu {
-  display: none;
+.icon-menu,
+.icon-cross {
+  fill: currentColor;
 }
-.mobile-menu {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
+@media screen and (max-width: 767px) {
+  .site-nav {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .site-nav__list {
+    margin-bottom: 306px;
+  }
+  .site-nav__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+  .site-nav__link {
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: var(--primary-text-color);
+    &.current {
+      color: var(--accent-text-color);
+    }
+  }
+  .contacts__icon {
+    display: none;
+  }
+  .contacts {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .contacts__item:not(:first-child) {
+    margin-bottom: 32px;
+  }
+  .mob-tel {
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: var(--accent-text-color);
+  }
+  .mob-email {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+    color: var(--secondary-text-color);
+  }
+  .mobile-social__list {
+    margin-top: 64px;
+  }
+  .mobile-social__link {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    color: var(--accent-text-color);
+  }
+  .mobile-social__item {
+    position: relative;
+    margin-right: 20px;
+  }
+  .mobile-social__item:not(:last-child) {
+    &::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: -10px;
 
-  width: 100%;
-  height: 453px;
-  padding: 10px;
-  background-color: green;
-  text-align: center;
-  font-size: 20px;
-  &.is-open {
-    display: block;
+      display: block;
+      height: 22px;
+      border: 1px solid rgba(33, 33, 33, 0.2);
+    }
+  }
+
+  .mobile-menu {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    padding: 48px 40px;
+    &.is-open {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+  }
+}
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
+  .mobile-social__list {
+    display: none;
   }
 }
