--- a/css/main.css
+++ b/css/main.css
@@ -267,7 +267,7 @@ textarea {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    max-height: 796%;
     background-color: #ffffff;
     padding: 48px 40px;
   }
