--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -112,7 +112,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    max-height: 796%;
     background-color: #ffffff;
     padding: 48px 40px;
     &.is-open {
