--- a/css/main.css
+++ b/css/main.css
@@ -142,6 +142,8 @@ textarea {
 }
 
 .menu-button {
+  position: absolute;
+  right: 0;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -190,6 +192,7 @@ textarea {
 
 @media screen and (max-width: 767px) {
   .site-nav {
+    position: relative;
     padding-top: 10px;
     padding-bottom: 10px;
   }
