--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -1,5 +1,4 @@
 .menu-button {
-  right: 0;
   display: inline-flex;
   padding: 0;
   margin-left: auto;
@@ -36,6 +35,21 @@
   fill: currentColor;
 }
 @media screen and (max-width: 767px) {
+  .mobile-menu {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    padding: 48px 40px;
+    &.is-open {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+  }
   .site-nav {
     padding-top: 10px;
     padding-bottom: 10px;
@@ -104,22 +118,6 @@
       display: block;
       height: 22px;
       border: 1px solid rgba(33, 33, 33, 0.2);
-    }
-  }
-
-  .mobile-menu {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    max-height: 796%;
-    background-color: #ffffff;
-    padding: 48px 40px;
-    &.is-open {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
     }
   }
 }
