--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -2,13 +2,17 @@
   font-family: var(--secondary-font-family);
   color: #000000;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   &--accent {
     color: var(--accent-text-color);
   }
   &--inverse {
     color: var(--reserve-text-color);
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
+    line-height: 1.19;
   }
 }
