--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -211,7 +211,7 @@ textarea {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    max-height: 796px;
     background-color: #ffffff;
     padding: 48px 40px;
   }
@@ -226,6 +226,7 @@ textarea {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    z-index: 500;
   }
   .site-nav__list {
     margin-bottom: 306px;
