--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -41,13 +41,14 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    max-height: 796px;
     background-color: #ffffff;
     padding: 48px 40px;
     &.is-open {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      z-index: 500;
     }
   }
 
