--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -207,7 +207,7 @@ textarea {
 @media screen and (max-width: 767px) {
   .mobile-menu {
     display: none;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
@@ -300,6 +300,7 @@ textarea {
 }
 
 .header {
+  position: relative;
   border-bottom: 1px solid #ececec;
 }
 
