--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -37,7 +37,8 @@
 @media screen and (max-width: 767px) {
   .mobile-menu {
     display: none;
-    position: fixed;
+    // position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
