--- a/css/main.css
+++ b/css/main.css
@@ -187,7 +187,7 @@ textarea {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  width: 357px;
+  max-width: 357px;
 }
 
 .icon-menu,
@@ -287,6 +287,17 @@ textarea {
     display: block;
     height: 22px;
     border: 1px solid rgba(33, 33, 33, 0.2);
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .mob-tel {
+    font-size: 32px;
+    line-height: 1.17;
+  }
+  .mobile-social__link {
+    font-size: 14px;
+    line-height: 1.17;
   }
 }
 
