--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -28,7 +28,7 @@
 .mobile-social__list {
   display: flex;
   justify-content: space-between;
-  width: 357px;
+  max-width: 357px;
 }
 .icon-menu,
 .icon-cross {
@@ -119,5 +119,16 @@
       height: 22px;
       border: 1px solid rgba(33, 33, 33, 0.2);
     }
+  }
+}
+// for ipfhone
+@media screen and (max-width: 420px) {
+  .mob-tel {
+    font-size: 32px;
+    line-height: 1.17;
+  }
+  .mobile-social__link {
+    font-size: 14px;
+    line-height: 1.17;
   }
 }
