--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -742,7 +742,7 @@ textarea {
 .portfolio-projects__title {
   margin-bottom: 4px;
   font-weight: 700;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--primary-text-color);
@@ -834,6 +834,9 @@ textarea {
         flex-basis: calc(100% / 3 - var(--card-set-gap));
     margin-left: var(--card-set-gap);
     margin-top: var(--card-set-gap);
+  }
+  .portfolio-projects__title {
+    font-size: 18px;
   }
 }
 /*# sourceMappingURL=portfolio.css.map */
