--- a/sass/components/_portfolio-projects.scss
+++ b/sass/components/_portfolio-projects.scss
@@ -11,7 +11,7 @@
 .portfolio-projects__title {
   margin-bottom: 4px;
   font-weight: 700;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--primary-text-color);
@@ -87,5 +87,8 @@
     flex-basis: calc(100% / 3 - var(--card-set-gap));
     margin-left: var(--card-set-gap);
     margin-top: var(--card-set-gap);
+  }
+  .portfolio-projects__title {
+    font-size: 18px;
   }
 }
